[package]
name = "sync_file"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Files that can be read concurrently"

repository = "https://github.com/a1phyr/sync_file"
documentation = "https://docs.rs/sync_file"

categories = ["concurrency", "filesystem"]
keywords = ["file", "sync", "concurrency"]

[target.'cfg(all(target_os = "wasi", target_env = "p1"))'.dependencies]
wasip1 = "1.0"
